tests/errors/test_57.x
// Dot access only permissible on struct variables


fn main() -> i64 {

    let a = 2;
    let c = a.e;

    return 0;
}